定时任务+Lua给锁续命